--- a/supermarketdataset.ipynb
+++ b/supermarketdataset.ipynb
@@ -63,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dedf7a8-d0e2-4d4e-b4db-8b911001f343",
+   "metadata": {},
+   "source": [
+    "Note that there is no guarantee that this code will run exactly as intended in the future. It is subjected to the layout of Amazon.com and can thus cause errors is things are changed on the site"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4285a06a-f371-4700-b225-346df0994a87",
