--- a/supermarketdataset.ipynb
+++ b/supermarketdataset.ipynb
@@ -4370,7 +4370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "DZBJm2Ab5yqz",
    "metadata": {
     "colab": {
@@ -4384,10 +4384,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-446b7492-4d4d-428c-8cef-c91f4acdc449\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -4418,58 +4415,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Austin-Texas</td>\n",
+       "      <td>San Francisco-Carlifornia</td>\n",
        "      <td>Arts &amp; Crafts</td>\n",
        "      <td>Crafting</td>\n",
        "      <td>Command Large Picture Hanging Strips, White, H...</td>\n",
        "      <td>13.27</td>\n",
-       "      <td>11.539999</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>2021-08-31</td>\n",
+       "      <td>11.330895</td>\n",
+       "      <td>ATM card</td>\n",
+       "      <td>2021-10-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Austin-Texas</td>\n",
-       "      <td>Arts &amp; Crafts</td>\n",
-       "      <td>Crafting</td>\n",
-       "      <td>Scissors, iBayam 8\" Multipurpose Scissors Bulk...</td>\n",
-       "      <td>6.79</td>\n",
-       "      <td>6.187303</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>2021-06-24</td>\n",
+       "      <td>Men's Fashion</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>Gildan Men's Crew T-Shirts, Multipack</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>13.558325</td>\n",
+       "      <td>ATM card</td>\n",
+       "      <td>2021-05-19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Austin-Texas</td>\n",
-       "      <td>Arts &amp; Crafts</td>\n",
-       "      <td>Crafting</td>\n",
-       "      <td>Luna Bean Keepsake Hands Casting Kit | DIY Pla...</td>\n",
-       "      <td>34.99</td>\n",
-       "      <td>32.931599</td>\n",
+       "      <td>Health &amp; Household</td>\n",
+       "      <td>Vitamins, Minerals &amp; Supplements</td>\n",
+       "      <td>Fish Oil by Nature's Bounty, Dietary Supplemen...</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>8.761420</td>\n",
        "      <td>Cash</td>\n",
-       "      <td>2021-02-24</td>\n",
+       "      <td>2021-03-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Austin-Texas</td>\n",
-       "      <td>Arts &amp; Crafts</td>\n",
-       "      <td>Crafting</td>\n",
-       "      <td>Amazon Basics Clear Thermal Laminating Plastic...</td>\n",
-       "      <td>16.16</td>\n",
-       "      <td>14.634799</td>\n",
-       "      <td>ATM card</td>\n",
-       "      <td>2021-01-03</td>\n",
+       "      <td>Sparks-Nevada</td>\n",
+       "      <td>Home &amp; Kitchen</td>\n",
+       "      <td>Bedding</td>\n",
+       "      <td>Elviros Cervical Memory Foam Pillow, Contour P...</td>\n",
+       "      <td>49.99</td>\n",
+       "      <td>45.115305</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>2021-05-23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>San Francisco-Carlifornia</td>\n",
-       "      <td>Arts &amp; Crafts</td>\n",
-       "      <td>Crafting</td>\n",
-       "      <td>Scotch Thermal Laminating Pouches, 100-Pack, 8...</td>\n",
-       "      <td>15.18</td>\n",
-       "      <td>13.025127</td>\n",
+       "      <td>Austin-Texas</td>\n",
+       "      <td>Automotive</td>\n",
+       "      <td>Tools &amp; Equipment</td>\n",
+       "      <td>Klein Tools 32500 11-in-1 Screwdriver / Nut Dr...</td>\n",
+       "      <td>14.97</td>\n",
+       "      <td>13.956462</td>\n",
        "      <td>Cash</td>\n",
-       "      <td>2021-03-01</td>\n",
+       "      <td>2021-11-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4485,188 +4482,126 @@
        "    <tr>\n",
        "      <th>234920</th>\n",
        "      <td>Austin-Texas</td>\n",
-       "      <td>Luggage</td>\n",
-       "      <td>Boys Fashion</td>\n",
-       "      <td>Coolife Luggage Expandable Suitcase PC+ABS 3 P...</td>\n",
-       "      <td>179.99</td>\n",
-       "      <td>151.134686</td>\n",
+       "      <td>Health &amp; Household</td>\n",
+       "      <td>Sexual Wellness</td>\n",
+       "      <td>#LubeLife Water Based Personal Lubricant, 8 Ou...</td>\n",
+       "      <td>8.49</td>\n",
+       "      <td>8.039043</td>\n",
        "      <td>Cash</td>\n",
-       "      <td>2021-10-10</td>\n",
+       "      <td>2021-09-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234921</th>\n",
-       "      <td>Austin-Texas</td>\n",
-       "      <td>Luggage</td>\n",
-       "      <td>Boys Fashion</td>\n",
-       "      <td>Coolife Luggage Expandable Suitcase PC+ABS 3 P...</td>\n",
-       "      <td>179.99</td>\n",
-       "      <td>161.212709</td>\n",
+       "      <td>Houston-Texas</td>\n",
+       "      <td>Baby</td>\n",
+       "      <td>Baby &amp; Toddler Toys</td>\n",
+       "      <td>NatureBond Baby Food Feeder/Fruit Feeder Pacif...</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>14.990264</td>\n",
        "      <td>ATM card</td>\n",
-       "      <td>2021-10-08</td>\n",
+       "      <td>2021-07-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234922</th>\n",
-       "      <td>Austin-Texas</td>\n",
-       "      <td>Luggage</td>\n",
-       "      <td>Boys Fashion</td>\n",
-       "      <td>Coolife Luggage Expandable Suitcase PC+ABS 3 P...</td>\n",
-       "      <td>179.99</td>\n",
-       "      <td>148.360513</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>2021-12-15</td>\n",
+       "      <td>San Francisco-Carlifornia</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Camera &amp; Photo</td>\n",
+       "      <td>SanDisk 256GB Extreme microSDXC UHS-I Memory C...</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>31.113148</td>\n",
+       "      <td>Gift card</td>\n",
+       "      <td>2021-09-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234923</th>\n",
-       "      <td>Buffalo-New York</td>\n",
-       "      <td>Luggage</td>\n",
-       "      <td>Boys Fashion</td>\n",
-       "      <td>Coolife Luggage Expandable Suitcase PC+ABS 3 P...</td>\n",
-       "      <td>179.99</td>\n",
-       "      <td>154.362762</td>\n",
-       "      <td>ATM card</td>\n",
-       "      <td>2021-02-02</td>\n",
+       "      <td>San Francisco-Carlifornia</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Home Audio</td>\n",
+       "      <td>OontZ Angle 3 Bluetooth Speaker | Portable Blu...</td>\n",
+       "      <td>24.97</td>\n",
+       "      <td>22.530280</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>2021-05-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234924</th>\n",
-       "      <td>Austin-Texas</td>\n",
-       "      <td>Luggage</td>\n",
-       "      <td>Boys Fashion</td>\n",
-       "      <td>Coolife Luggage Expandable Suitcase PC+ABS 3 P...</td>\n",
-       "      <td>179.99</td>\n",
-       "      <td>138.959337</td>\n",
-       "      <td>ATM card</td>\n",
-       "      <td>2021-05-17</td>\n",
+       "      <td>San Francisco-Carlifornia</td>\n",
+       "      <td>Baby</td>\n",
+       "      <td>Car Seats &amp; Accessories</td>\n",
+       "      <td>Graco TurboBooster Highback Booster Seat, Glacier</td>\n",
+       "      <td>59.99</td>\n",
+       "      <td>52.490122</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>2021-06-10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>234925 rows × 8 columns</p>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-446b7492-4d4d-428c-8cef-c91f4acdc449')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-446b7492-4d4d-428c-8cef-c91f4acdc449 button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-446b7492-4d4d-428c-8cef-c91f4acdc449');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
-       "                           Branch       Category  Sub_Category  \\\n",
-       "0                    Austin-Texas  Arts & Crafts      Crafting   \n",
-       "1                    Austin-Texas  Arts & Crafts      Crafting   \n",
-       "2                    Austin-Texas  Arts & Crafts      Crafting   \n",
-       "3                    Austin-Texas  Arts & Crafts      Crafting   \n",
-       "4       San Francisco-Carlifornia  Arts & Crafts      Crafting   \n",
-       "...                           ...            ...           ...   \n",
-       "234920               Austin-Texas        Luggage  Boys Fashion   \n",
-       "234921               Austin-Texas        Luggage  Boys Fashion   \n",
-       "234922               Austin-Texas        Luggage  Boys Fashion   \n",
-       "234923           Buffalo-New York        Luggage  Boys Fashion   \n",
-       "234924               Austin-Texas        Luggage  Boys Fashion   \n",
+       "                           Branch            Category  \\\n",
+       "0       San Francisco-Carlifornia       Arts & Crafts   \n",
+       "1                    Austin-Texas       Men's Fashion   \n",
+       "2                    Austin-Texas  Health & Household   \n",
+       "3                   Sparks-Nevada      Home & Kitchen   \n",
+       "4                    Austin-Texas          Automotive   \n",
+       "...                           ...                 ...   \n",
+       "234920               Austin-Texas  Health & Household   \n",
+       "234921              Houston-Texas                Baby   \n",
+       "234922  San Francisco-Carlifornia         Electronics   \n",
+       "234923  San Francisco-Carlifornia         Electronics   \n",
+       "234924  San Francisco-Carlifornia                Baby   \n",
        "\n",
-       "                                                  Product   Price  Cost_Price  \\\n",
-       "0       Command Large Picture Hanging Strips, White, H...   13.27   11.539999   \n",
-       "1       Scissors, iBayam 8\" Multipurpose Scissors Bulk...    6.79    6.187303   \n",
-       "2       Luna Bean Keepsake Hands Casting Kit | DIY Pla...   34.99   32.931599   \n",
-       "3       Amazon Basics Clear Thermal Laminating Plastic...   16.16   14.634799   \n",
-       "4       Scotch Thermal Laminating Pouches, 100-Pack, 8...   15.18   13.025127   \n",
-       "...                                                   ...     ...         ...   \n",
-       "234920  Coolife Luggage Expandable Suitcase PC+ABS 3 P...  179.99  151.134686   \n",
-       "234921  Coolife Luggage Expandable Suitcase PC+ABS 3 P...  179.99  161.212709   \n",
-       "234922  Coolife Luggage Expandable Suitcase PC+ABS 3 P...  179.99  148.360513   \n",
-       "234923  Coolife Luggage Expandable Suitcase PC+ABS 3 P...  179.99  154.362762   \n",
-       "234924  Coolife Luggage Expandable Suitcase PC+ABS 3 P...  179.99  138.959337   \n",
+       "                            Sub_Category  \\\n",
+       "0                               Crafting   \n",
+       "1                               Clothing   \n",
+       "2       Vitamins, Minerals & Supplements   \n",
+       "3                                Bedding   \n",
+       "4                      Tools & Equipment   \n",
+       "...                                  ...   \n",
+       "234920                   Sexual Wellness   \n",
+       "234921               Baby & Toddler Toys   \n",
+       "234922                    Camera & Photo   \n",
+       "234923                        Home Audio   \n",
+       "234924           Car Seats & Accessories   \n",
+       "\n",
+       "                                                  Product  Price  Cost_Price  \\\n",
+       "0       Command Large Picture Hanging Strips, White, H...  13.27   11.330895   \n",
+       "1                   Gildan Men's Crew T-Shirts, Multipack  15.00   13.558325   \n",
+       "2       Fish Oil by Nature's Bounty, Dietary Supplemen...   9.54    8.761420   \n",
+       "3       Elviros Cervical Memory Foam Pillow, Contour P...  49.99   45.115305   \n",
+       "4       Klein Tools 32500 11-in-1 Screwdriver / Nut Dr...  14.97   13.956462   \n",
+       "...                                                   ...    ...         ...   \n",
+       "234920  #LubeLife Water Based Personal Lubricant, 8 Ou...   8.49    8.039043   \n",
+       "234921  NatureBond Baby Food Feeder/Fruit Feeder Pacif...  15.99   14.990264   \n",
+       "234922  SanDisk 256GB Extreme microSDXC UHS-I Memory C...  34.05   31.113148   \n",
+       "234923  OontZ Angle 3 Bluetooth Speaker | Portable Blu...  24.97   22.530280   \n",
+       "234924  Graco TurboBooster Highback Booster Seat, Glacier  59.99   52.490122   \n",
        "\n",
        "       Payment_Type  Order_Date  \n",
-       "0              Cash  2021-08-31  \n",
-       "1              Cash  2021-06-24  \n",
-       "2              Cash  2021-02-24  \n",
-       "3          ATM card  2021-01-03  \n",
-       "4              Cash  2021-03-01  \n",
+       "0          ATM card  2021-10-30  \n",
+       "1          ATM card  2021-05-19  \n",
+       "2              Cash  2021-03-03  \n",
+       "3              Cash  2021-05-23  \n",
+       "4              Cash  2021-11-09  \n",
        "...             ...         ...  \n",
-       "234920         Cash  2021-10-10  \n",
-       "234921     ATM card  2021-10-08  \n",
-       "234922         Cash  2021-12-15  \n",
-       "234923     ATM card  2021-02-02  \n",
-       "234924     ATM card  2021-05-17  \n",
+       "234920         Cash  2021-09-06  \n",
+       "234921     ATM card  2021-07-15  \n",
+       "234922    Gift card  2021-09-02  \n",
+       "234923         Cash  2021-05-29  \n",
+       "234924         Cash  2021-06-10  \n",
        "\n",
        "[234925 rows x 8 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "products_df = products_df.sample(frac=1).reset_index(drop=True)\n",
     "products_df.to_csv('products.csv', index=False)\n",
     "products_df"
    ]
